<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/GeneralBackground"
    tools:context=".UserDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        style="@style/BackgroundHeader"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/title_detail"
            style="@style/TextTitle"
            android:text="@string/detail_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.431"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.565" />

        <ImageButton
            android:id="@+id/share_detail"
            style="@style/ShareButton"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/favorite_button"
            app:layout_constraintEnd_toStartOf="@+id/favorite_button"
            app:layout_constraintTop_toTopOf="@+id/favorite_button"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="ContentDescription,TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/back_detail"
            style="@style/BackButton"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.333"
            tools:ignore="ContentDescription,TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <ToggleButton
            android:id="@+id/favorite_button"
            style="@style/FavoriteButton"
            android:layout_marginEnd="20dp"
            android:textOff=""
            android:textOn=""
            app:layout_constraintBottom_toBottomOf="@+id/title_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/title_detail"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="ContentDescription,TouchTargetSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_marginTop="55dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout4"
            style="@style/DetailArea">

            <ImageView
                android:id="@+id/image_detail"
                style="@style/ImageGithub"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="ContentDescription,ImageContrastCheck" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_user"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="100dp"
                app:civ_border_color="@color/white"
                app:civ_border_width="2dp"
                app:layout_constraintEnd_toEndOf="@+id/image_detail"
                app:layout_constraintStart_toStartOf="@+id/image_detail"
                app:layout_constraintTop_toTopOf="@+id/image_detail"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/name_detail"
                style="@style/TextDetailTitle"
                android:text="@string/name"
                app:layout_constraintEnd_toEndOf="@+id/image_user"
                app:layout_constraintStart_toStartOf="@+id/image_user"
                app:layout_constraintTop_toBottomOf="@+id/image_user" />

            <TextView
                android:id="@+id/username_detail"
                style="@style/TextDetailUsername"
                android:text="@string/username"
                app:layout_constraintEnd_toEndOf="@+id/name_detail"
                app:layout_constraintStart_toStartOf="@+id/name_detail"
                app:layout_constraintTop_toBottomOf="@+id/name_detail"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/company_detail"
                style="@style/TextDetailCompany"
                android:text="@string/company"
                app:layout_constraintEnd_toEndOf="@+id/username_detail"
                app:layout_constraintStart_toStartOf="@+id/username_detail"
                app:layout_constraintTop_toBottomOf="@+id/username_detail"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/location_detail"
                style="@style/TextDetailLocation"
                android:text="@string/location"
                app:layout_constraintEnd_toEndOf="@+id/company_detail"
                app:layout_constraintStart_toStartOf="@+id/company_detail"
                app:layout_constraintTop_toBottomOf="@+id/company_detail"
                tools:ignore="TextContrastCheck" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="28dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/location_detail"
                app:layout_constraintHorizontal_bias="0.52"
                app:layout_constraintStart_toStartOf="@+id/location_detail"
                app:layout_constraintTop_toBottomOf="@+id/company_detail"
                app:layout_constraintVertical_bias="0.0">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/detail_tab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:background="@color/teal_700"
                    app:layout_constraintEnd_toEndOf="@+id/location_detail"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/location_detail"
                    app:layout_constraintTop_toBottomOf="@+id/company_detail"
                    app:tabTextColor="@color/white"
                    tools:ignore="SpeakableTextPresentCheck" />

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/detail_view_pager"
                    android:layout_width="match_parent"
                    android:layout_height="280dp"
                    android:background="@drawable/border_teal"
                    android:nestedScrollingEnabled="false"
                    android:paddingBottom="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/detail_tab"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/detail_tab"
                    app:layout_constraintTop_toBottomOf="@+id/detail_tab"
                    app:layout_constraintVertical_bias="0.0" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar2"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                android:layout_marginBottom="120dp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>